# climate-toolkit

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
apis/: dependencies.py  main.py
apis/routes/: __init__.py  climatology.py  compare.py  compare_datasets.py  data.py  hazards.py  seasons.py  statistics.py
apis/schemas/: __init__.py  responses.py
apis/static/: style.css
apis/templates/: base.html  climatology.html  compare.html  compare_datasets.html  compare_periods.html  fetch_data.html  hazards.html  index.html  seasons.html  statistics.html
climate_tookit/calculate_hazards/: ensemble_hazards.py  hazards.py  soil_capacity.py
climate_tookit/climate_statistics/: ensemble_statistics.py  statistics.py
climate_tookit/climatology/: __init__.py  long_term_climatology.py
climate_tookit/compare_datasets/: compare_datasets.py
climate_tookit/compare_periods/: ensemble_periods.py  periods.py
climate_tookit/fetch_data/: fetch_data.py
climate_tookit/fetch_data/preprocess_data/: preprocess_data.py
climate_tookit/fetch_data/source-data/: source_data.py
climate_tookit/season_analysis/: ensemble.py  seasons.py
fetch_data/source-data/: era_5.py  source_data.py
source-data/: agera_5.py  era_5.py  imerg.py  models.py  source_data.py  terraclimate.py
source-data/configs/: config.yaml  settings.py
source-data/scripts_JM/: terraclimate_curl_ppt_2023.sh  terraclimate_curl_ppt_2024.sh  terraclimate_curl_tmax_2023.sh  terraclimate_curl_tmax_2024.sh
tests/: test_pipeline.R  test_pipeline.py
(+36 files in other folders)
