[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-toolkit"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "earthengine-api>=1.5.22",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "PyYAML>=6.0.2",
    "requests>=2.32.4",
    "xarray>=2025.6.1",
    "numpy>=1.26.4",
    "matplotlib>=3.10.1",
    "scipy>=1.9.1",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.1.2",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["climate_tookit*"]
